- corrected the mobile layout - split the CSS files - corrected the player layout - corrected the navbar layout   * connect button always visible   * removed the mobile menu   * added the meta viewport to allow mobile responsiveness   * added meta tag for android - updated the roadmap

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,191 +1,41 @@
 $turquoise: #f50;
 
 .my-container {
-  padding: 0;
   margin: 0;
-  list-style: none;
+  padding: 0 4%;
+
   display: flex;
-  flex-flow: row wrap;
+  list-style: none;
   justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+
+}
+
+@media screen and (max-width: 652px) {
+  .my-container {
+    height: 100%;
+    flex-direction: column;
+  }
+  .my-track {
+    flex: 1 1 0;
+    width: 100% !important;
+  }
 }
 
 .header {
   box-shadow: 0px 2px 1px 0px rgba(197, 197, 197, 0.84);
 }
 
-// LOADING SPINNER
-
-.spinner {
-  width: 40px;
-  height: 40px;
-
-  position: relative;
-  margin: 100px auto;
+@media screen and (max-width: 768px) {
+  .header .container {
+    flex-direction: row !important;
+  }
 }
 
-.double-bounce1, .double-bounce2 {
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #333;
-  opacity: 0.6;
-  position: absolute;
-  top: 0;
-  left: 0;
-
-  -webkit-animation: sk-bounce 2.0s infinite ease-in-out;
-  animation: sk-bounce 2.0s infinite ease-in-out;
-}
-
-.double-bounce2 {
-  -webkit-animation-delay: -1.0s;
-  animation-delay: -1.0s;
-}
-
-@-webkit-keyframes sk-bounce {
-  0%, 100% { -webkit-transform: scale(0.0) }
-  50% { -webkit-transform: scale(1.0) }
-}
-
-@keyframes sk-bounce {
-  0%, 100% {
-    transform: scale(0.0);
-    -webkit-transform: scale(0.0);
-  } 50% {
-      transform: scale(1.0);
-      -webkit-transform: scale(1.0);
-    }
-}
-
-$ground: #ddd;
-
-input[type=range] {
-  /*removes default webkit styles*/
-  -webkit-appearance: none;
-
-  /*fix for FF unable to apply focus style bug */
-  border: 1px solid white;
-
-  /*required for proper track sizing in FF*/
-  //width: 300px;
-  width: 100%;
-}
-input[type=range]::-webkit-slider-runnable-track {
-  width: 100%;
-  height: 5px;
-  background: $ground;
-  border: none;
-  border-radius: 3px;
-}
-input[type=range]::-webkit-slider-thumb {
-  -webkit-appearance: none;
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: $turquoise;
-  margin-top: -4px;
-}
-input[type=range]:focus {
-  outline: none;
-}
-input[type=range]:focus::-webkit-slider-runnable-track {
-  background: #ccc;
-}
-
-input[type=range]::-moz-range-track {
-  width: 100%;
-  height: 5px;
-  background: $ground;
-  border: none;
-  border-radius: 3px;
-}
-input[type=range]::-moz-range-thumb {
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: $turquoise;
-}
-
-////////////// PLAYER RANGE
-
-/*hide the outline behind the border*/
-input[type=range]:-moz-focusring{
-  outline: 1px solid white;
-  outline-offset: -1px;
-}
-
-input[type=range]::-ms-track {
-  width: 100%;
-  height: 5px;
-
-  /*remove bg colour from the track, we'll use ms-fill-lower and ms-fill-upper instead */
-  background: transparent;
-
-  /*leave room for the larger thumb to overflow with a transparent border */
-  border-color: transparent;
-  border-width: 6px 0;
-
-  /*remove default tick marks*/
-  color: transparent;
-}
-input[type=range]::-ms-fill-lower {
-  background: #777;
-  border-radius: 10px;
-}
-input[type=range]::-ms-fill-upper {
-  background: #ddd;
-  border-radius: 10px;
-}
-input[type=range]::-ms-thumb {
-  border: none;
-  height: 16px;
-  width: 16px;
-  border-radius: 50%;
-  background: $turquoise;
-}
-input[type=range]:focus::-ms-fill-lower {
-  background: #888;
-}
-input[type=range]:focus::-ms-fill-upper {
-  background: #ccc;
-}
-
-//////////////// PLAYER
-
-.player {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  //align-content: center;
-  align-items: center;
-  background-color: white;
-  position: fixed;
-  bottom: 0;
-  width: 100%;
-  height: 40px;
-  z-index: 2;
-  box-shadow: 0px -1px 1px 0px rgba(197, 197, 197, 0.84);
-}
-
-.player--item {
-  display: flex;
-  //flex-shrink: 1;
-  padding-right: 2%
-;
-}
-
-.player--item--range {
-  display: flex;
-  flex-grow: 2;
-  padding-right: 15px;
-}
-
-.content--item {
-  margin-right: 15px;
-}
-
+@import "./player";
+@import "./player.slider";
+@import "./spinner";
 @import "../../node_modules/bulma/bulma";
 
 //$fa-font-path: "../../node_modules/font-awesome/fonts";
